--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dummy",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://patrickthumeyer.github.io/react-params-product-list",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@testing-library/jest-dom": "^5.7.0",
